<resources>
    <string name="app_name">Tetris</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tetris_game">TetrisGame</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="pause">Pause</string>
    <string name="lines">Lines</string>
    <string name="level">Level</string>
    <string name="lines_count">0</string>
    <string name="level_count">1</string>
    <string name="score">Score</string>
    <string name="score_total">0</string>
    <string name="next_piece">Next Piece</string>
    <string name="title_description">Title of game</string>
    <string name="title_activity_tetris_leaderboard">TetrisLeaderboard</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="previous_games">Previous Games</string>
</resources>
